proof/tests/illtyped/objref_undeclared.nft
# ILL-TYPED: a `counter name` reference to an object that is NOT declared in
# the table.  nft rejects this at load time ("counter 'nope' does not exist");
# the Coq typechecker refuses it because [objkind_declared] finds no declared
# object of that name (Surface/Typecheck.tc_stmt on StObjref).
table ip t {
  counter cnt1 { }
  chain c {
    type filter hook input priority 0; policy accept;
    ip saddr 192.168.1.3 counter name "nope"
  }
}
